# pdf-extratext

./: README.md  pyproject.toml
app/application/services/: document_service.py  pdf_service.py  validation_service.py
app/core/: config.py  exceptions.py
app/domain/entities/: document.py
app/domain/interfaces/: document_repository.py
docs/: api_contract.md  architecture.md  modules.md  tdd_guide.md
tests/: test_documents.py  test_pdf_service.py  test_validation_service.py
