[project]
name = "pdf-extractext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "motor>=3.7.1",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.26",
    "uvicorn>=0.46.0",
]
